# PredictIQ

./: ARCHITECTURE.md  LICENSE  MODEL_CARD.md  README.md  pyproject.toml
notebooks/: 1_EDA.ipynb  2_FeatureEngineering.ipynb  3_ModelingEvaluation.ipynb
src/predictiq/: data.py  features.py  modeling.py
